--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -600,11 +600,18 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="classUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aMl-wW-Hx7">
+                                <rect key="frame" x="16" y="423" width="343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="7cU-IL-YT8" firstAttribute="trailing" secondItem="XoM-Fa-Ji3" secondAttribute="trailing" id="2cH-1c-Mdc"/>
                             <constraint firstItem="XoM-Fa-Ji3" firstAttribute="trailing" secondItem="afw-rO-e43" secondAttribute="trailing" constant="133" id="4NY-iw-aeU"/>
+                            <constraint firstItem="aMl-wW-Hx7" firstAttribute="leading" secondItem="XoM-Fa-Ji3" secondAttribute="leading" constant="16" id="5Er-Fn-wM4"/>
                             <constraint firstItem="iYu-6C-qPA" firstAttribute="leading" secondItem="XoM-Fa-Ji3" secondAttribute="leading" constant="131" id="8JB-Em-THR"/>
                             <constraint firstItem="uhf-qY-lPc" firstAttribute="centerX" secondItem="Gt1-lE-cxf" secondAttribute="centerX" id="8Ji-yQ-Nbg"/>
                             <constraint firstItem="pQW-4B-ddm" firstAttribute="top" secondItem="z94-9C-cRO" secondAttribute="bottom" constant="1" id="9iD-tj-dtI"/>
@@ -612,6 +619,7 @@
                             <constraint firstItem="z94-9C-cRO" firstAttribute="top" secondItem="RoQ-KH-CdI" secondAttribute="bottom" constant="21" id="AzU-Hm-dYM"/>
                             <constraint firstItem="7cU-IL-YT8" firstAttribute="trailing" secondItem="XoM-Fa-Ji3" secondAttribute="trailing" id="CNs-Qt-OnV"/>
                             <constraint firstItem="86j-NO-o7j" firstAttribute="centerX" secondItem="XoM-Fa-Ji3" secondAttribute="centerX" constant="3.5" id="CfD-3o-Ae4"/>
+                            <constraint firstItem="aMl-wW-Hx7" firstAttribute="top" secondItem="HKK-Ri-CxO" secondAttribute="bottom" constant="15" id="Cnm-qX-hmt"/>
                             <constraint firstItem="7cU-IL-YT8" firstAttribute="leading" secondItem="XoM-Fa-Ji3" secondAttribute="leading" id="Cuy-Yn-Xi5"/>
                             <constraint firstItem="pQW-4B-ddm" firstAttribute="centerX" secondItem="z94-9C-cRO" secondAttribute="centerX" constant="-3.5" id="DZo-VX-Cx2"/>
                             <constraint firstItem="7cU-IL-YT8" firstAttribute="leading" secondItem="XoM-Fa-Ji3" secondAttribute="leading" id="EBk-1Y-5Eq"/>
@@ -631,6 +639,7 @@
                             <constraint firstItem="n0V-d9-Aip" firstAttribute="top" secondItem="Z5W-dO-oTQ" secondAttribute="bottom" id="RsM-L7-pCp"/>
                             <constraint firstItem="7cU-IL-YT8" firstAttribute="top" secondItem="XoM-Fa-Ji3" secondAttribute="top" constant="401" id="Sxc-jJ-4EG"/>
                             <constraint firstItem="RoQ-KH-CdI" firstAttribute="top" secondItem="Sjp-Tv-ytr" secondAttribute="bottom" id="THZ-bU-IsA"/>
+                            <constraint firstItem="XoM-Fa-Ji3" firstAttribute="trailing" secondItem="aMl-wW-Hx7" secondAttribute="trailing" constant="16" id="Z0G-5h-KMc"/>
                             <constraint firstItem="RoQ-KH-CdI" firstAttribute="centerX" secondItem="XoM-Fa-Ji3" secondAttribute="centerX" id="ZjA-j4-Tk8"/>
                             <constraint firstItem="Z5W-dO-oTQ" firstAttribute="centerX" secondItem="XoM-Fa-Ji3" secondAttribute="centerX" constant="3.5" id="adY-8o-9Ib"/>
                             <constraint firstItem="Z5W-dO-oTQ" firstAttribute="top" secondItem="uhf-qY-lPc" secondAttribute="bottom" constant="21" id="b0X-HK-H7U"/>
